# NDK-OpenSLES

./: README.md
AndroidAudioRecord/: README.md
AudioDemo/: .gitignore  README.md  build.gradle
AudioRecorderLib/: .gitignore  CMakeLists.txt  README.md  build.gradle
NativeSampleAudioRecord/: settings.gradle
NativeSampleAudioRecord/AudioRecorderLib/: CMakeLists.txt
NativeSampleAudioRecord/AudioRecorderLib/src/main/cpp/: audiocapture.cpp
NativeSampleAudioRecord/AudioRecorderLib/src/main/cpp/audiorecord/: audiorecord.cpp
NativeSampleAudioRecord/AudioRecorderLib/src/main/cpp/base/: jvm.h  log.h
NativeSampleAudioRecord/AudioRecorderLib/src/main/cpp/opensles/: com_net168_audiorecord_opensles_OpenSLESRecord.h
NativeSampleAudioRecord/AudioRecorderLib/src/main/java/com/net168/audiorecord/: AudioCapture.java  BaseRecord.java
NativeSampleAudioRecord/AudioRecorderLib/src/main/java/com/net168/audiorecord/audiorecord/: AudioRecordCore.java  AudioRecordRecord.java
NativeSampleAudioRecord/AudioRecorderLib/src/main/java/com/net168/audiorecord/opensles/: OpenSLESRecord.java
NativeSampleAudioRecord/app/: CMakeLists.txt  build.gradle
NativeSampleAudioRecord/app/src/androidTest/java/com/speex/audiorecord/: ExampleInstrumentedTest.java
NativeSampleAudioRecord/app/src/main/: AndroidManifest.xml
NativeSampleAudioRecord/app/src/main/cpp/: speex_audiorecord.cpp
NativeSampleAudioRecord/app/src/main/cpp/base/: AndroidLog.h  AudioJniCallback.h
NativeSampleAudioRecord/app/src/main/cpp/include/: com_speex_audiorecord_SpeexAudioCapture.h
NativeSampleAudioRecord/app/src/main/java/com/speex/audiorecord/: SpeexAudioCapture.java  SpeexAudioRecord.java
NativeSampleAudioRecord/app/src/main/java/com/speex/audiorecord/activity/: JavaAudioRecordActivity.java  MainActivity.java  NativeAudioRecordActivity.java
NativeSampleAudioRecord/app/src/main/java/com/speex/audiorecord/api/audio/: AudioPlayer.java
NativeSampleAudioRecord/app/src/main/java/com/speex/audiorecord/api/wav/: WavFileHeader.java  WavFileReader.java  WavFileWriter.java
NativeSampleAudioRecord/app/src/main/java/com/speex/audiorecord/tester/: AudioPlayerTester.java  Tester.java
NativeSampleAudioRecord/app/src/main/res/layout/: activity_java_audio_record.xml  activity_main.xml  activity_native_audio_record.xml
NativeSampleAudioRecord/app/src/main/res/values/: strings.xml  themes.xml
NativeSampleAudioRecord/app/src/main/res/values-night/: themes.xml
NativeSampleAudioRecord/app/src/test/java/com/speex/audiorecord/: ExampleUnitTest.java
OpenSLES/: README.md  (+1 more)
OpenSLES/app/src/main/cpp/: AndroidLog.h  CMakeLists.txt  OpenSLESPlayer.cpp  OpenSLESPlayer.h  OpenSLESRecorder.cpp  OpenSLESRecorder.h  native-lib.cpp
(+189 files in other folders)
